--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=QOL Tob
+author=Scowled
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=QOL Tob plugin
+tags=Tob
+plugins=com.qoltob.QoltobPlugin
