--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=QOL Tob
+displayName=Nylo Stats
 author=Scowled
-support=
-description=QOL Tob plugin
-tags=Tob
-plugins=com.qoltob.QoltobPlugin
+support=https://github.com/JaccodR/nylo-stats
+description=Nylocas stats plugin
+tags=Tob, nylo, nylocas, stats, nylostats
+plugins=com.nylostats.NyloStatsPlugin
