--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Nylo Stats
 author=Scowled
-support=https://github.com/JaccodR/nylo-stats
+support=https://github.com/JaccodR/nylo-stats/issues
 description=Nylocas stats plugin
 tags=Tob, nylo, nylocas, stats, nylostats
 plugins=com.nylostats.NyloStatsPlugin
